force-app/main/default/objects/Account/fields/FS_Distributor_ACN__c.field-meta.xml
<CustomField>
    <fullName>FS_Distributor_ACN__c</fullName>
    <formula>FS_Distributor__r.FS_ACN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distributor/Bottler ACN</label>
    <type>Text</type>
</CustomField>