force-app/main/default/objects/Account/fields/FS_Distributor_Address__c.field-meta.xml
<CustomField>
    <fullName>FS_Distributor_Address__c</fullName>
    <formula>FS_Distributor__r.ShippingStreet &amp; BR() &amp;
 FS_Distributor__r.ShippingCity &amp;&quot;, &quot;&amp;  FS_Distributor__r.ShippingState &amp;&quot; &quot;&amp;  FS_Distributor__r.ShippingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distributor/Bottler Address</label>
    <type>Text</type>
</CustomField>