force-app/main/default/objects/Account/fields/FS_Distributor_Approved_InitialOrder__c.field-meta.xml
<CustomField>
    <fullName>FS_Distributor_Approved_InitialOrder__c</fullName>
    <description>Is Distributor Approved for Initial Order Processing? Distributor-&gt; 
Is Distributor Approved for Initial Order Processing</description>
    <formula>TEXT(FS_Distributor__r.FS_Is_Distributor_Approved_InitialOrder__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distributor Approved for Initial Order?</label>
    <type>Text</type>
</CustomField>