force-app/main/default/objects/Account/fields/FS_Distributor_Cartridge_Status__c.field-meta.xml
<CustomField>
    <fullName>FS_Distributor_Cartridge_Status__c</fullName>
    <label>Distributor Cartridge Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A - Distributor understands cartridge pick/pack economics</fullName>
            </value>
            <value>
                <fullName>B - Distributor implementing cartridge pick/pack operation</fullName>
            </value>
            <value>
                <fullName>C - Distributor VMO in place</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>