force-app/main/default/objects/Account/fields/FS_Distributor_City__c.field-meta.xml
<CustomField>
    <fullName>FS_Distributor_City__c</fullName>
    <label>Distributor City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>