force-app/main/default/objects/Account/fields/FS_Distributor_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>FS_Distributor_Customer_ID__c</fullName>
    <description>Cisco Customer Id</description>
    <inlineHelpText>Cisco Customer Id</inlineHelpText>
    <label>Distributor/Bottler Customer # (OLET)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>