force-app/main/default/objects/Account/fields/FS_Distributor_Foodservice_Desc__c.field-meta.xml
<CustomField>
    <fullName>FS_Distributor_Foodservice_Desc__c</fullName>
    <description>Field created 10/23/13 by H.Whitacre to support QB Distributors migration</description>
    <label>Distributor Foodservice Desc</label>
    <length>80</length>
    <type>Text</type>
</CustomField>