force-app/main/default/objects/Account/fields/FS_Distributor_Name__c.field-meta.xml
<CustomField>
    <fullName>FS_Distributor_Name__c</fullName>
    <description>Distributor Name from the Customer Input Form</description>
    <label>Distributor Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>