force-app/main/default/objects/Account/fields/FS_Distributor_Sweetener_Status__c.field-meta.xml
<CustomField>
    <fullName>FS_Distributor_Sweetener_Status__c</fullName>
    <label>Distributor Sweetener Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1- DAE or Activation Lead Introduction to Freestyle</fullName>
            </value>
            <value>
                <fullName>2 - Distributor in agreement to stock/ship sweeteners</fullName>
            </value>
            <value>
                <fullName>3 - Distributor is setup and sweeteners available</fullName>
            </value>
            <value>
                <fullName>4 - Confirmed order capability for new outlet</fullName>
            </value>
            <value>
                <fullName>5 - Order placed by customer and received by DC</fullName>
            </value>
            <value>
                <fullName>6 - Distributor Outlet Level Reporting Verified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>