force-app/main/default/objects/Account/fields/FS_District__c.field-meta.xml
<CustomField>
    <fullName>FS_District__c</fullName>
    <description>SAP integration</description>
    <label>District</label>
    <length>50</length>
    <type>Text</type>
</CustomField>