force-app/main/default/objects/Account/fields/FS_DNSE__c.field-meta.xml
<CustomField>
    <fullName>FS_DNSE__c</fullName>
    <description>Distributor layout</description>
    <label>DNSE</label>
    <length>64</length>
    <type>Text</type>
</CustomField>