force-app/main/default/objects/Account/fields/FS_Don_t_Use_Chain_Pmt_Type__c.field-meta.xml
<CustomField>
    <fullName>FS_Don_t_Use_Chain_Pmt_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Don&#39;t Use Chain Pmt Type</label>
    <type>Checkbox</type>
</CustomField>