force-app/main/default/objects/Account/fields/FS_Dr_Pepper__c.field-meta.xml
<CustomField>
    <fullName>FS_Dr_Pepper__c</fullName>
    <description>FS_Headquarters__r.FS_Dr_Pepper_pct__c</description>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dr. Pepper % of Legacy Mix</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>