force-app/main/default/objects/Account/fields/FS_Dr_Pepper_pct__c.field-meta.xml
<CustomField>
    <fullName>FS_Dr_Pepper_pct__c</fullName>
    <description>Pepper Mix</description>
    <label>Dr. Pepper % of Legacy Mix</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>&lt; 10%</fullName>
            </value>
            <value>
                <fullName>10% - 20%</fullName>
            </value>
            <value>
                <fullName>&gt; 20%</fullName>
            </value>
            <value>
                <fullName>N/A - Pibb Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>