force-app/main/default/objects/Account/fields/FS_Equipment_Type__c.field-meta.xml
<CustomField>
    <fullName>FS_Equipment_Type__c</fullName>
    <formula>&#39;Equipment Type&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Equipment Type</label>
    <type>Text</type>
</CustomField>