force-app/main/default/objects/Account/fields/FS_Estimated_Annual_Volume_gallons__c.field-meta.xml
<CustomField>
    <fullName>FS_Estimated_Annual_Volume_gallons__c</fullName>
    <label>Estimated Annual Volume(gallons):</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>