force-app/main/default/objects/Account/fields/FS_Execution_Plan__c.field-meta.xml
<CustomField>
    <fullName>FS_Execution_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Execution Plan</label>
    <referenceTo>FS_Execution_Plan__c</referenceTo>
    <relationshipLabel>Outlets</relationshipLabel>
    <relationshipName>Outlet</relationshipName>
    <type>Lookup</type>
</CustomField>