force-app/main/default/objects/Account/fields/FS_Final_Order_Text_value__c.field-meta.xml
<CustomField>
    <fullName>FS_Final_Order_Text_value__c</fullName>
    <label>Final Order text value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>