force-app/main/default/objects/Account/fields/FS_First_Install_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_First_Install_Date__c</fullName>
    <label>First Install Date</label>
    <summarizedField>FS_Outlet_Dispenser__c.FS_Date_Installed2__c</summarizedField>
    <summaryFilterItems>
        <field>FS_Outlet_Dispenser__c.FS_IsActive__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>FS_Outlet_Dispenser__c.FS_Status__c</field>
        <operation>equals</operation>
        <value>Enrolled</value>
    </summaryFilterItems>
    <summaryForeignKey>FS_Outlet_Dispenser__c.FS_Outlet__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>