force-app/main/default/objects/Account/fields/FS_FS_Equipment_Removal_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_FS_Equipment_Removal_Date__c</fullName>
    <formula>IF( FS_ALL_FS_Equipment_Removed__c , FS_Max_Removal_Date__c ,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FS Equipment Removal Date</label>
    <type>Date</type>
</CustomField>