force-app/main/default/objects/Account/fields/FS_FSM_Comments__c.field-meta.xml
<CustomField>
    <fullName>FS_FSM_Comments__c</fullName>
    <label>FSM Comments</label>
    <type>TextArea</type>
</CustomField>