force-app/main/default/objects/Account/fields/FS_FSM_Review__c.field-meta.xml
<CustomField>
    <fullName>FS_FSM_Review__c</fullName>
    <label>FSM Review</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Reviewed</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>