force-app/main/default/objects/Account/fields/FS_FSM_Review_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>FS_FSM_Review_Date_Time__c</fullName>
    <label>FSM Review Date/Time</label>
    <type>DateTime</type>
</CustomField>