force-app/main/default/objects/Account/fields/FS_FSM_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>FS_FSM_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CCFS Finance Reviewer</description>
    <label>CCFS Finance Reviewer</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>FS FSM_P</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>FS Admin PM_P</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>