force-app/main/default/objects/Account/fields/FS_FSM_Status__c.field-meta.xml
<CustomField>
    <fullName>FS_FSM_Status__c</fullName>
    <formula>IF( ISBLANK ( FS_Chain__c ),IF(TEXT(FS_FSM_Review__c) = &quot;&quot;,&quot;FSM Approval Required for HQ.&quot;, TEXT(FS_FSM_Review__c)),IF(TEXT(FS_Chain__r.FS_FSM_Review__c) = &quot;&quot;, &quot;Pending on Chain&quot;,TEXT(FS_Chain__r.FS_FSM_Review__c)&amp;&quot; on Chain&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FSM Status</label>
    <type>Text</type>
</CustomField>