force-app/main/default/objects/Account/fields/FS_FTN_ORG__c.field-meta.xml
<CustomField>
    <fullName>FS_FTN_ORG__c</fullName>
    <description>CCM Field</description>
    <label>FTN ORG</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>