force-app/main/default/objects/Account/fields/FS_General_Comments__c.field-meta.xml
<CustomField>
    <fullName>FS_General_Comments__c</fullName>
    <label>General Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>