force-app/main/default/objects/Account/fields/FS_GeoLocation__c.field-meta.xml
<CustomField>
    <fullName>FS_GeoLocation__c</fullName>
    <label>Geolocation</label>
    <scale>7</scale>
    <type>Location</type>
</CustomField>