force-app/main/default/objects/Account/fields/FS_HFCS_Sweetener_Code__c.field-meta.xml
<CustomField>
    <fullName>FS_HFCS_Sweetener_Code__c</fullName>
    <label>Distributor/Bottler HFCS Sweetener Code</label>
    <length>18</length>
    <type>Text</type>
</CustomField>