force-app/main/default/objects/Account/fields/FS_HQ_ACN__c.field-meta.xml
<CustomField>
    <fullName>FS_HQ_ACN__c</fullName>
    <formula>FS_Headquarters__r.FS_ACN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HQ ACN</label>
    <type>Text</type>
</CustomField>