force-app/main/default/objects/Account/fields/FS_Indicator_Ecomm_Chk__c.field-meta.xml
<CustomField>
    <fullName>FS_Indicator_Ecomm_Chk__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Indicator Ecomm Chk</label>
    <type>Checkbox</type>
</CustomField>