force-app/main/default/objects/Account/fields/FS_Indicator_Ecomm_Status__c.field-meta.xml
<CustomField>
    <fullName>FS_Indicator_Ecomm_Status__c</fullName>
    <formula>(IF( AND(
FS_of_Ready_for_Scheduling__c &gt; 0,
FS_of_total_Installs__c  &lt;&gt;  FS_Survey_Install_Cancelled__c,
NOT(FS_Indicator_Ecomm_Chk__c)),&quot;*Required&quot;,

IF( AND( 
FS_of_Ready_for_Scheduling__c &gt;0,
FS_of_total_Installs__c  &lt;&gt;  FS_Survey_Install_Cancelled__c,
FS_Indicator_Ecomm_Chk__c),&quot;Complete&quot;,

IF( AND( FS_of_total_Installs__c  = FS_Survey_Install_Cancelled__c,
FS_Indicator_Ecomm_Chk__c),&quot;*Needs to be Removed&quot;,&quot;Not Needed&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Indicator Ecomm Status</label>
    <type>Text</type>
</CustomField>