force-app/main/default/objects/Account/fields/FS_Indicator_FTN_Removal_Status__c.field-meta.xml
<CustomField>
    <fullName>FS_Indicator_FTN_Removal_Status__c</fullName>
    <formula>((If( AND (TEXT(FS_CS_All_Ftn_Removed__c) =&quot;Yes&quot; ,
NOT( FS_Indicator_FTN_Removal_Chk__c ),
Today()-FS_Max_Installation_Date__c &gt;30),  &quot;*Required&quot;,

(If(AND(TEXT(FS_CS_All_Ftn_Removed__c) =&quot;Yes&quot; ,
FS_Indicator_FTN_Removal_Chk__c),&quot;Complete&quot;,

(If(AND(TEXT(FS_CS_All_Ftn_Removed__c)=&quot;No&quot; ,
FS_Indicator_FTN_Removal_Chk__c),&quot;*Needs to be Removed&quot;,&quot;Not Needed&quot;)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Indicator FTN Removal Status</label>
    <type>Text</type>
</CustomField>