force-app/main/default/objects/Account/fields/FS_Indicator_JT_Chk__c.field-meta.xml
<CustomField>
    <fullName>FS_Indicator_JT_Chk__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To remove once SAP integration has been updated</description>
    <label>Dummy_1</label>
    <type>Checkbox</type>
</CustomField>