force-app/main/default/objects/Account/fields/FS_Indicator_MV_Chk__c.field-meta.xml
<CustomField>
    <fullName>FS_Indicator_MV_Chk__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To delete after integration has been updated</description>
    <label>Dummy_3</label>
    <type>Checkbox</type>
</CustomField>