force-app/main/default/objects/Account/fields/FS_Installation_Contact__c.field-meta.xml
<CustomField>
    <fullName>FS_Installation_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Installation Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Installation Contact)</relationshipLabel>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>