force-app/main/default/objects/Account/fields/FS_Installation_Contact_Alt_Phone__c.field-meta.xml
<CustomField>
    <fullName>FS_Installation_Contact_Alt_Phone__c</fullName>
    <label>Installation Contact Alternate Phone</label>
    <type>Phone</type>
</CustomField>