force-app/main/default/objects/Account/fields/FS_Installation_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>FS_Installation_Contact_Email__c</fullName>
    <label>Installation Contact Email</label>
    <type>Email</type>
</CustomField>