force-app/main/default/objects/Account/fields/FS_Installation_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>FS_Installation_Contact_Name__c</fullName>
    <label>Installation Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>