force-app/main/default/objects/Account/fields/FS_Installation_Contact_Title__c.field-meta.xml
<CustomField>
    <fullName>FS_Installation_Contact_Title__c</fullName>
    <label>Installation Contact Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>