force-app/main/default/objects/Account/fields/FS_Installs_Complete__c.field-meta.xml
<CustomField>
    <fullName>FS_Installs_Complete__c</fullName>
    <label># Installs Complete</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>