force-app/main/default/objects/Account/fields/FS_Is_Address_Validated__c.field-meta.xml
<CustomField>
    <fullName>FS_Is_Address_Validated__c</fullName>
    <inlineHelpText>Checked when the Address field is validated</inlineHelpText>
    <label>Is Address Validated?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>