force-app/main/default/objects/Account/fields/FS_Is_Distributor_Approved_InitialOrder__c.field-meta.xml
<CustomField>
    <fullName>FS_Is_Distributor_Approved_InitialOrder__c</fullName>
    <inlineHelpText>Is Distributor Approved for Initial Order Processing?</inlineHelpText>
    <label>Distributor Approved for Initial Order?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Not Approved</fullName>
            </value>
            <value>
                <fullName>Not Applicable (Bottler)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>