force-app/main/default/objects/Account/fields/FS_Jet_Indicator__c.field-meta.xml
<CustomField>
    <fullName>FS_Jet_Indicator__c</fullName>
    <label>Jet Indicator DEPRECATED DONT USE</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>