force-app/main/default/objects/Account/fields/FS_Jet_Indicator_Action_Needed__c.field-meta.xml
<CustomField>
    <fullName>FS_Jet_Indicator_Action_Needed__c</fullName>
    <label>Jet Indicator Action Needed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>