force-app/main/default/objects/Account/fields/FS_JET_UpdateDateTime__c.field-meta.xml
<CustomField>
    <fullName>FS_JET_UpdateDateTime__c</fullName>
    <description>This field is using to update the accounts when there is a change on Platform Type/s value on Installation. it will be used in back end purpose so it should not be deleted.</description>
    <label>JET Indicator Account Update Date/Time</label>
    <type>DateTime</type>
</CustomField>