force-app/main/default/objects/Account/fields/FS_JetIndicator_ActionNeeded_PIA__c.field-meta.xml
<CustomField>
    <fullName>FS_JetIndicator_ActionNeeded_PIA__c</fullName>
    <description>back end field to display JET indicator Action needed value on Post installation records based on Platform Type and Quantity of OD present under that outlet</description>
    <label>Jet Indicator Action Needed PIA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>