force-app/main/default/objects/Account/fields/FS_Key_Barrier_Now__c.field-meta.xml
<CustomField>
    <fullName>FS_Key_Barrier_Now__c</fullName>
    <label>Key Barrier Now</label>
    <length>120</length>
    <type>Text</type>
</CustomField>