force-app/main/default/objects/Account/fields/FS_Last_approved_modified_by__c.field-meta.xml
<CustomField>
    <fullName>FS_Last_approved_modified_by__c</fullName>
    <description>Field used to capture the last approved or modified the field Distributor ordering</description>
    <label>Distributor Last approved by.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>