force-app/main/default/objects/Account/fields/FS_Last_approved_modified_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>FS_Last_approved_modified_Date_Time__c</fullName>
    <label>Distributor Last approved Date/Time.</label>
    <type>DateTime</type>
</CustomField>