force-app/main/default/objects/Account/fields/FS_Last_Update_CCM__c.field-meta.xml
<CustomField>
    <fullName>FS_Last_Update_CCM__c</fullName>
    <description>CCM Field</description>
    <label>Last Update (CCM)</label>
    <type>DateTime</type>
</CustomField>