force-app/main/default/objects/Account/fields/Fs_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Fs_Latitude__c</fullName>
    <label>Latitude</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>