force-app/main/default/objects/Account/fields/FS_Legal_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>FS_Legal_Entity_Name__c</fullName>
    <label>Legal Entity Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>