force-app/main/default/objects/Account/fields/Fs_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Fs_Longitude__c</fullName>
    <label>Longitude</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>