force-app/main/default/objects/Account/fields/FS_Mail_Sub__c.field-meta.xml
<CustomField>
    <fullName>FS_Mail_Sub__c</fullName>
    <description>CCM Field</description>
    <label>Mail Sub</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>