force-app/main/default/objects/Account/fields/FS_Mail_To_ACN__c.field-meta.xml
<CustomField>
    <fullName>FS_Mail_To_ACN__c</fullName>
    <label>Mail To ACN</label>
    <length>50</length>
    <type>Text</type>
</CustomField>