force-app/main/default/objects/Account/fields/FS_Mail_To_Name__c.field-meta.xml
<CustomField>
    <fullName>FS_Mail_To_Name__c</fullName>
    <label>Mail To Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>