force-app/main/default/objects/Account/fields/FS_Manual_Order_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>FS_Manual_Order_Approval_Status__c</fullName>
    <label>Manual Order Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approve</fullName>
                <label>Approved</label>
            </value>
            <value>
                <fullName>Reject</fullName>
                <label>Rejected</label>
            </value>
            <value>
                <fullName>Approved</fullName>
                <isActive>false</isActive>
                <label>Approved</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>