force-app/main/default/objects/Account/fields/FS_Manual_Order_Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>FS_Manual_Order_Rejection_Reason__c</fullName>
    <label>Manual Order Rejection Reason</label>
    <type>TextArea</type>
</CustomField>